--- a/day6-v2/pyproject.toml
+++ b/day6-v2/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["David Buckley <david@davidbuckley.ca>"]
 [tool.poetry.dependencies]
 python = ">=3.7,<3.11"
 numpy = "^1.21.4"
+aocd = "^0.1"
 
 [tool.poetry.dev-dependencies]
 
